fix header alignment without buttons

--- a/static/css/components/header.css
+++ b/static/css/components/header.css
@@ -5,6 +5,7 @@
 
 .Header {
   --grid-template: var(--grid-template-basic);
+  align-items: center;
   background: var(--color-bg-2);
   block-size: var(--header-height);
   padding-block: var(--header-space);
